--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
 
     <p id="action-message">Make your move</p>
+    <p>By Ken Hunja</p>
 
     <script src="index.js"></script>
 </body>
